--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,7 @@ header ul{display:inline-block;background:#fff;text-align:center;padding:10px;ma
 header li{display:inline-block}
 header a{display:block;color:#154e74;padding:10px}
 header a:hover{color:#217dbb;text-decoration:none;background:#eee;border-radius:4px}
-header a:focus{color:#3498db;text-decoration:none}
+header a:focus{color:#638068;text-decoration:none}
 header.active{display:block}
 header.sticky{position:fixed;z-index:999}#menu.active{display:block}#mobile-menu-open{display:none;cursor:pointer;position:fixed;right:15px;top:10px;color:#3498db;font-size:1.5em;z-index:20;padding:0 7px;border-radius:4px;background:#fff}#mobile-menu-close{display:none;text-align:right;width:100%;background:#fff;font-size:1.5em;padding-right:15px;padding-top:10px;cursor:pointer;color:#3498db}#mobile-menu-close 
 span{font-size:0.5em;text-transform:uppercase}#mobile-menu-close
@@ -44,8 +44,8 @@ a:hover{color:#3498db}
 #lead-content{position:absolute;z-index:10;top:50%;left:50%;transform:translate(-50%, -50%);text-align:center}
 #lead-content h1,#lead-content h2{margin:0}
 #lead-content h1{color:#fff;font-weight:900;font-size:5em;text-transform:uppercase;letter-spacing:0.05em;line-height:0.9em}
-#lead-content h2{color:#a0cfee;font-weight:500;font-size:2.25em;margin-bottom:15px}
-#lead-overlay{position:absolute;height:100%;width:100%;top:0;right:0;bottom:0;left:0;background:rgba(33,125,187,0.8);z-index:1}
+#lead-content h2{color:#224434;font-weight:500;font-size:2.25em;margin-bottom:15px}
+#lead-overlay{position:absolute;height:100%;width:100%;top:0;right:0;bottom:0;left:0;background:rgba(121, 189, 147, 0.75);z-index:1}
 #lead-down{position:absolute;left:0;right:0;width:100%;text-align:center;z-index:10;bottom:15px;color:#fff}
 #lead-down span{cursor:pointer;display:block;margin:0 auto;width:35px;height:35px;border-radius:50%;border:3px solid #a0cfee;text-align:center}
 #lead-down i{
