--- a/css/styles.css
+++ b/css/styles.css
@@ -9,30 +9,205 @@
     Description: This file contains all the styles associated with the page
     that don't come from third party libraries. This file gets compiled using
     Gulp and send to the /css folder which is then loaded on the page.
-*/body{font-family:'Lato', sans-serif;font-size:16px}
-body.active{overflow:hidden;z-index:-1}.no-js #experience-timeline>
-div{background:#fff;padding:10px;margin-bottom:10px;border:1px solid #dcd9d9}.no-js #experience-timeline>
-div h3{font-size:1.5em;font-weight:300;color:#374054;display:inline-block;margin:0}.no-js #experience-timeline>
-div h4{font-size:1.2em;font-weight:300;color:#7e8890;margin:0 0 15px 0}.no-js #experience-timeline>
-div p{color:#74808a;font-size:0.9em;margin:0}.no-js #experience-timeline:before,.no-js #experience-timeline:after{content:none}@keyframes dropHeader{0%{transform:translateY(-100%)}100%{transform:translateY(0)}}
-header{position:absolute;top:0;left:0;right:0;text-align:center;z-index:10;animation-name:dropHeader;animation-iteration-count:1;animation-timing-function:ease;animation-duration:0.75s}
-header ul{display:inline-block;background:#fff;text-align:center;padding:10px;margin:0;border-bottom-right-radius:4px;border-bottom-left-radius:4px}
-header li{display:inline-block}
-header a{display:block;color:#154e74;padding:10px}
-header a:hover{color:#217dbb;text-decoration:none;background:#eee;border-radius:4px}
-header a:focus{color:#638068;text-decoration:none}
-header.active{display:block}
-header.sticky{position:fixed;z-index:999}#menu.active{display:block}#mobile-menu-open{display:none;cursor:pointer;position:fixed;right:15px;top:10px;color:#3498db;font-size:1.5em;z-index:20;padding:0 7px;border-radius:4px;background:#fff}#mobile-menu-close{display:none;text-align:right;width:100%;background:#fff;font-size:1.5em;padding-right:15px;padding-top:10px;cursor:pointer;color:#3498db}#mobile-menu-close 
-span{font-size:0.5em;text-transform:uppercase}#mobile-menu-close
-i{vertical-align:middle}
-footer{padding:50px 0}.copyright{padding-top:20px}.copyright
-p{margin:0;color:#74808a}.top{text-align:center}.top
-span{cursor:pointer;display:block;margin:15px auto 0 auto;width:35px;height:35px;border-radius:50%;border:3px solid #b9bfc4;text-align:center}.top
-i{color:#74808a}.social{text-align:right}.social 
-ul{margin:5px 0 0 0;padding:0}.social 
-li{display:inline-block;font-size:1.25em;list-style:none}.social 
-a{display:block;color:#74808a;padding:10px}.social 
-a:hover{color:#3498db}
+*/
+
+body{
+    font-family:'Lato', sans-serif;
+    font-size:16px
+}
+
+body.active{
+    overflow:hidden;
+    z-index:-1
+}.no-js #experience-timeline>
+
+div{
+    background:#fff;
+    padding:10px;
+    margin-bottom:10px;
+    border:1px solid #dcd9d9
+}.no-js #experience-timeline>
+
+div h3{
+    font-size:1.5em;
+    font-weight:300;
+    color:#374054;
+    display:inline-block;
+    margin:0
+}.no-js #experience-timeline>
+
+div h4{
+    font-size:1.2em;
+    font-weight:300;
+    color:#7e8890;
+    margin:0 0 15px 0
+}.no-js #experience-timeline>
+
+div p{
+    color:#74808a;
+    font-size:0.9em;
+    margin:0
+}
+.no-js #experience-timeline:before,.no-js #experience-timeline:after{
+    content:none
+}
+
+@keyframes dropHeader{
+    0%{
+        transform:translateY(-100%)
+    }
+    100%{
+        transform:translateY(0)
+    }
+}
+header{
+    position:absolute;
+    top:0;
+    left:0;
+    right:0;
+    text-align:center;
+    z-index:10;
+    animation-name:dropHeader;
+    animation-iteration-count:1;
+    animation-timing-function:ease;
+    animation-duration:0.75s
+}
+
+header ul{
+    display:inline-block;
+    background:#fff;
+    text-align:center;padding:10px;
+    margin:0;
+    border-bottom-right-radius:4px;
+    border-bottom-left-radius:4px;
+}
+
+header li{
+    display:inline-block
+}
+
+header a{
+    display:block;
+    color:#154e74;
+    padding:10px;
+}
+
+header a:hover{
+    color:#217dbb;
+    text-decoration:none;
+    background:#eee;
+    border-radius:4px;
+}
+
+header a:focus{
+    color:#638068;
+    text-decoration:none;
+}
+
+header.active{
+    display:block;
+}
+
+header.sticky{
+    position:fixed;
+    z-index:999
+}
+
+#menu.active{
+    display:block
+}
+
+#mobile-menu-open{
+    display:none;
+    cursor:pointer;
+    position:fixed;
+    right:15px;
+    top:10px;
+    color:#3498db;
+    font-size:1.5em;
+    z-index:20;
+    padding:0 7px;
+    border-radius:4px;
+    background:#fff;
+}
+
+#mobile-menu-close{
+    display:none;
+    text-align:right;
+    width:100%;
+    background:#fff;
+    font-size:1.5em;
+    padding-right:15px;
+    padding-top:10px;
+    cursor:pointer;
+    color:#3498db
+}
+
+#mobile-menu-close span{
+    font-size:0.5em;
+    text-transform:uppercase
+}
+#mobile-menu-close i{
+    vertical-align:middle
+}
+
+footer{
+    padding:50px 0
+}
+
+.copyright{
+    padding-top:20px
+}
+
+.copyright p{
+    margin:0;
+    color:#74808a
+}
+
+.top{
+    text-align:center
+}
+
+.top span{
+    cursor:pointer;
+    display:block;
+    margin:15px auto 0 auto;
+    width:35px;
+    height:35px;
+    border-radius:50%;
+    border:3px solid #b9bfc4;
+    text-align:center
+}
+
+.top i{
+    color:#74808a
+}
+
+.social{
+    text-align:right
+}
+
+.social ul{
+    margin:5px 0 0 0;
+    padding:0
+}
+
+.social li{
+    display:inline-block;
+    font-size:1.25em;
+    list-style:none
+}
+
+.social a{
+    display:block;
+    color:#74808a;
+    padding:10px
+}
+
+.social a:hover{
+    color:#3498db
+}
+
 .btn-rounded-white{display:inline-block;color:#fff;padding:15px 25px;border:3px solid #fff;border-radius:30px;transition:.5s ease all}
 .btn-rounded-white:hover{color:#3498db;background:#fff;text-decoration:none}
 .shadow{box-shadow:0 1px 3px rgba(0,0,0,0.12),0 1px 2px rgba(0,0,0,0.24)}
@@ -64,12 +239,49 @@ a:hover{color:#3498db}
         transform:scale(1, 1)
     }
 }
-#about{padding:75px 15px;border-bottom:1px solid #dcd9d9}#about h2{color:#374054}
-#about p{color:#74808a;margin:0}
-#experience{padding:50px 15px;text-align:center;border-bottom:1px solid #dcd9d9}
-#experience h2{color:#374054}
-#experience-timeline{margin:30px auto 0 auto;position:relative;max-width:1000px}
-#experience-timeline:before{position:absolute;content:'';top:0;bottom:0;left:303px;right:auto;height:100%;width:3px;background:#3498db;z-index:0}
+
+#about{
+    padding:75px 15px;
+    border-bottom:1px solid #dcd9d9
+}
+
+#about h2{
+    color:#374054
+}
+
+#about p{
+    color:#74808a;margin:0
+}
+
+#experience{
+    padding:50px 15px;
+    text-align:center;
+    border-bottom:1px solid #dcd9d9
+}
+
+#experience h2{
+    color:#374054
+}
+
+#experience-timeline{
+    margin:30px auto 0 auto;
+    position:relative;
+    max-width:1000px
+}
+
+#experience-timeline:before{
+    position:absolute;
+    content:'';
+    top:0;
+    bottom:0;
+    left:303px;
+    right:auto;
+    height:100%;
+    width:3px;
+    background:#3498db;
+    z-index:0
+}
+
 #experience-timeline:after{position:absolute;content:'';width:3px;height:40px;background:#3498db;background:linear-gradient(to bottom, #3498db, rgba(52,152,219,0));top:100%;left:303px}
 .vtimeline-content{margin-left:350px;background:#fff;border:1px solid #e6e6e6;padding:15px;border-radius:3px;text-align:left}
 .vtimeline-content h3{font-size:1.5em;font-weight:300;color:#374054;display:inline-block;margin:0}
