--- a/css/styles.css
+++ b/css/styles.css
@@ -208,26 +208,133 @@ footer{
     color:#3498db
 }
 
-.btn-rounded-white{display:inline-block;color:#fff;padding:15px 25px;border:3px solid #fff;border-radius:30px;transition:.5s ease all}
-.btn-rounded-white:hover{color:#3498db;background:#fff;text-decoration:none}
-.shadow{box-shadow:0 1px 3px rgba(0,0,0,0.12),0 1px 2px rgba(0,0,0,0.24)}
-.shadow-large{box-shadow:0 3px 6px rgba(0,0,0,0.08),0 3px 6px rgba(0,0,0,0.15)}
-.heading{position:relative;display:inline-block;font-size:2em;font-weight:300;margin:0 0 30px 0}
-.heading:after{position:absolute;content:'';top:100%;height:1px;width:50px;left:0;right:0;margin:0 auto;background:#3498db}
-.background-alt{background:#f2f2f5}
-#lead{position:relative;height:100vh;min-height:500px;max-height:1080px;background:url(../images/mountain_fractal.jpg);background-size:cover;padding:15px;overflow:hidden}
-#lead-content{position:absolute;z-index:10;top:50%;left:50%;transform:translate(-50%, -50%);text-align:center}
-#lead-content h1,#lead-content h2{margin:0}
-#lead-content h1{color:#fff;font-weight:900;font-size:5em;text-transform:uppercase;letter-spacing:0.05em;line-height:0.9em}
-#lead-content h2{color:#224434;font-weight:500;font-size:2.25em;margin-bottom:15px}
-#lead-overlay{position:absolute;height:100%;width:100%;top:0;right:0;bottom:0;left:0;background:rgba(121, 189, 147, 0.75);z-index:1}
-#lead-down{position:absolute;left:0;right:0;width:100%;text-align:center;z-index:10;bottom:15px;color:#fff}
-#lead-down span{cursor:pointer;display:block;margin:0 auto;width:35px;height:35px;border-radius:50%;border:3px solid #a0cfee;text-align:center}
+.btn-rounded-white{
+    display:inline-block;
+    color:#fff;
+    padding:15px 25px;
+    border:3px solid #fff;
+    border-radius:30px;
+    transition:.5s ease all
+}
+
+.btn-rounded-white:hover{
+    color:#3498db;
+    background:#fff;
+    text-decoration:none
+}
+
+.shadow{
+    box-shadow:0 1px 3px rgba(0,0,0,0.12),0 1px 2px rgba(0,0,0,0.24)
+}
+
+.shadow-large{
+    box-shadow:0 3px 6px rgba(0,0,0,0.08),0 3px 6px rgba(0,0,0,0.15)
+}
+
+.heading{
+    position:relative;
+    display:inline-block;
+    font-size:2em;
+    font-weight:300;
+    margin:0 0 30px 0
+}
+
+.heading:after{
+    position:absolute;
+    content:'';
+    top:100%;
+    height:1px;
+    width:50px;
+    left:0;
+    right:0;
+    margin:0 auto;
+    background:#3498db
+}
+
+.background-alt{
+    background:#f2f2f5
+}
+
+#lead{
+    position:relative;
+    height:100vh;
+    min-height:500px;
+    max-height:1080px;
+    background:url(../images/mountain_fractal.jpg);
+    background-size:cover;
+    padding:15px;
+    overflow:hidden
+}
+
+#lead-content{
+    position:absolute;
+    z-index:10;
+    top:50%;
+    left:50%;
+    transform:translate(-50%, -50%);
+    text-align:center
+}
+
+#lead-content h1,#lead-content h2{
+    margin:0
+}
+
+#lead-content h1{
+    color:#fff;
+    font-weight:900;
+    font-size:5em;
+    text-transform:uppercase;
+    letter-spacing:0.05em;
+    line-height:0.9em
+}
+
+#lead-content h2{
+    color:#224434;
+    font-weight:500;
+    font-size:2.25em;
+    margin-bottom:15px
+}
+
+#lead-overlay{
+    position:absolute;
+    height:100%;
+    width:100%;
+    top:0;
+    right:0;
+    bottom:0;
+    left:0;
+    background:rgba(121, 189, 147, 0.75);
+    z-index:1
+}
+
+#lead-down{
+    position:absolute;
+    left:0;
+    right:0;
+    width:100%;
+    text-align:center;
+    z-index:10;
+    bottom:15px;
+    color:#fff
+}
+
+#lead-down span{
+    cursor:pointer;
+    display:block;
+    margin:0 auto;
+    width:35px;
+    height:35px;
+    border-radius:50%;
+    border:3px solid #a0cfee;
+    text-align:center
+}
+
 #lead-down i{
     animation:pulsate 1.5s ease;
     animation-iteration-count:infinite;
     padding-top:5px
 }
+
 @keyframes pulsate{
     0%{
         transform:scale(1, 1)
@@ -282,9 +389,34 @@ footer{
     z-index:0
 }
 
-#experience-timeline:after{position:absolute;content:'';width:3px;height:40px;background:#3498db;background:linear-gradient(to bottom, #3498db, rgba(52,152,219,0));top:100%;left:303px}
-.vtimeline-content{margin-left:350px;background:#fff;border:1px solid #e6e6e6;padding:15px;border-radius:3px;text-align:left}
-.vtimeline-content h3{font-size:1.5em;font-weight:300;color:#374054;display:inline-block;margin:0}
+#experience-timeline:after{
+    position:absolute;
+    content:'';
+    width:3px;
+    height:40px;
+    background:#3498db;
+    background:linear-gradient(to bottom, #3498db, rgba(52,152,219,0));
+    top:100%;
+    left:303px
+}
+
+.vtimeline-content{
+    margin-left:350px;
+    background:#fff;
+    border:1px solid #e6e6e6;
+    padding:15px;
+    border-radius:3px;
+    text-align:left
+}
+
+.vtimeline-content h3{
+    font-size:1.5em;
+    font-weight:300;
+    color:#374054;
+    display:inline-block;
+    margin:0
+}
+
 .vtimeline-content h4{font-size:1.2em;font-weight:300;color:#7e8890;margin:0 0 15px 0}
 .vtimeline-content p{color:#74808a;font-size:0.9em;margin:0}.vtimeline-point{position:relative;display:block;vertical-align:top;margin-bottom:30px}
 .vtimeline-icon{position:relative;color:#fff;width:50px;height:50px;background:#3498db;border-radius:50%;float:left;z-index:99;margin-left:280px}
