--- a/css/styles.css
+++ b/css/styles.css
@@ -27,12 +27,14 @@ body{
     position: fixed;
     display: block;
     z-index: 100;
-    width: 100%;
+    width: 50%;
+    left: 25%;
 }
 
 .sticky + .content {
     padding-top: 102px;
 }
+
 
 body.active{
     overflow:hidden;
@@ -255,10 +257,10 @@ footer{
 
 .heading{
     position:relative;
-    display:inline-block;
-    font-size:2em;
-    font-weight:300;
-    margin:0 0 30px 0
+    display:inline;
+    font-size:2.5em;
+    font-weight:100;
+    margin:0 5px 5px 5px
 }
 
 .heading:after{
@@ -266,7 +268,7 @@ footer{
     content:'';
     top:100%;
     height:1px;
-    width:50px;
+    width:25px;
     left:0;
     right:0;
     margin:0 auto;
@@ -275,6 +277,14 @@ footer{
 
 .background-alt{
     background:#f2f2f5
+}
+
+#headShot img{
+    border-radius: 50%;
+    width: 100%;
+    height:auto;
+    margin-left: 1px;
+    margin-right: 10px;
 }
 
 #lead{
@@ -386,12 +396,13 @@ footer{
 }
 
 #about{
-    padding:75px 15px;
+    padding:50px 1px 50px 1px;
     border-bottom:1px solid #dcd9d9
 }
 
 #about h2{
-    color:#374054
+    color:#374054;
+    margin: 0;
 }
 
 #about p{
